--- a/Style.css
+++ b/Style.css
@@ -3,10 +3,7 @@ header {
     background-color: white;
     color: white;
     font-family: sans-serif, serif;
-
 }
-
-
 
 .navbar li {	
 	display: inline_block;
@@ -41,7 +38,7 @@ header {
     opacity: 0.9;
     color:white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: rgba(5, 71, 59, 0.87)
+    background: rgba(5, 71, 59, 1);
 }
 
 body{
@@ -63,7 +60,7 @@ a{
     opacity: 0.9;
     color:white;
     font-family: Arial, Helvetica, sans-serif;
-    background: rgba(5, 71, 59, 0.87);    
+    background: rgba(5, 71, 59, 1);    
 }
 
 #summary{
@@ -72,23 +69,120 @@ a{
     border-radius: 1px;
     float:left;
     width: 100%;
+    height: 400px;
+    margin: 20px;
+
 
 }
 
 
 #viz{
     background-color: white;
+    position: absolute;
     padding: 10px;
     border-radius: 1px;
     float:right;
+    width: 80%;
+    height: 700px;
+    margin-top: 20px;
+
+}
+
+/* .container{
+    margin-top: 10px;
+} */
+
+#sampleimage{
+    position: relative;
+    margin: 1px;
+    margin-top: 90px;
+    top: 20%;
+    height: 100px;
+    float: left;
+    shape-outside: border-box;
+    border: 50px;
+    border-color: slateblue;
+    shape-outside: circle(40%);
+}
+
+#top-row{
+    /* background-color: purple; */
+    width: 100%;
+    height: 200px;
+}
+
+#bottom-row{
+    /* background-color: black; */
     width: 100%;
 }
 
-.container{
-    margin-top: 10px;
+.col-sm-6 img{
+    width: 95%;
+    position: absolute;
 }
 
-#sample_image{
-    position: absolute;
-    top: 40%;
+.graph_images{
+    width: 100%;
+}
+
+.body_container{
+    background-color: white;
+    padding: 40px;
+    width: 70%;
+    margin-top: 20px;
+}
+
+
+.compare div h2{
+    text-align: center;
+}
+
+.dropdown{
+    position: relative;
+}
+
+#max_temp{
+    width: 90%;
+    margin: 5%;
+}
+
+h2 {
+    color: rgba(5, 71, 59, 1);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight:bold;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+h3 {
+    color: rgba(5, 71, 59, 1);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight:bold;
+}
+
+#tempSum {
+    background:white;
+
+}
+
+#tempSum p{
+    margin:10px;
+    padding: 10px;
+}
+
+th{
+    text-align: center;
+}
+
+table{
+    /* position:absolute; */
+    width: 80%;
+}
+
+.data_container{
+    background-color: white;
+    /* position: absolute; */
+    padding: 40px;
+    width: 70%;
+    margin-top: 20px;
 }
